# QuickOpen

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  MSICustomActions.xml  QuickOpen.sln  QuickOpenBuildSettings.cmake  README.md  vcpkg.json
.github/workflows/: build-and-test.yaml  windows-build.yaml
NautilusExt/: CMakeLists.txt  main.cpp
QuickOpen/: AppConfig.cpp  AppConfig.h  AppGUI.cpp  AppGUI.h  AppGUIIncludes.h  ApplicationInfo.h  CMakeLists.txt  CivetWebIncludes.h  GUIUtils.cpp  GUIUtils.h  LinuxUtils.cpp  LinuxUtils.h  MGMocks.h  ManagementServer.cpp  ManagementServer.h  MockGUI.cpp  MockGUI.h  PlatformUtils.cpp  PlatformUtils.h  QuickOpen.rc  QuickOpen.vcxproj  QuickOpen.vcxproj.filters  QuickOpenCommon.cpp  QuickOpenCommon.h  TrayStatusWindow.cpp  TrayStatusWindow.h  Utils.h  WebServer.cpp  WebServer.h  WebServerUtils.cpp  WebServerUtils.h  WinUtils.cpp  WinUtils.h  config.json  main - old.cpp  main.cpp  resource.h
QuickOpen/static/: index.html
QuickOpenCommon/: AppConfig.cpp  AppConfig.h  AppGUI.cpp  AppGUI.h  CMakeLists.txt  GUIUtils.h  LinuxUtils.h  QuickOpenCommon.cpp  QuickOpenCommon.h  TrayStatusWindow.cpp  Utils.h  WebServer.cpp
Tests/: CMakeLists.txt  PlatformUtilsTests.cpp  Tests.vcxproj  Tests.vcxproj.filters  UtilsTests.cpp  WebServerTests.cpp
art/: QuickOpen_full_logo.ai  QuickOpen_letter_logo.ai
debian/: copyright  postinst  prerm
static/: file_picker.js  index.html
